<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="30dp"
    tools:context=".signup.StartUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/icon_png"
            android:contentDescription="@string/image_content_description" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/comment"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="italic" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="Tab1"
            android:background="@color/bluish"
            android:elevation="5dp"
            android:text="@string/Lets_go"
            android:textStyle="bold"
            tools:ignore="OnClick" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">


            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/greenish"
                android:elevation="5dp"
                android:onClick="LoginScreen"
                android:text="@string/login"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@color/greenish"
                android:elevation="5dp"
                android:text="@string/sign_up"
                android:onClick="SignupScreen"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>