<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".signup.OtpVarificationScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black_24dp"
            android:onClick="SignupScreen"
            android:tint="@android:color/black"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-black"
            android:includeFontPadding="true"
            android:text="@string/otp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:includeFontPadding="true"
            android:textAlignment="center"
            android:padding="20dp"
            android:layout_gravity="center"
            android:text="@string/otp_description"/>

        <com.chaos.view.PinView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:itemCount="6"
            app:itemHeight="40dp"
            app:itemWidth="40dp"
            app:lineColor="@android:color/black"
            android:itemBackground="@color/lightWhite"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@android:color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:elevation="5dp"
            android:text="@string/verify_code"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NOTE_otp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:gravity="center"/>





    </LinearLayout>

</ScrollView>